crates/nash-parse/src/expression/snapshots/nash_parse__expression__accessor__tests__accessor_simple.snap
---
source: crates/nash-parse/src/expression/accessor.rs
description: "Code:\n\n.name"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 6,
        },
    },
    value: Accessor(
        "name",
    ),
}
