crates/nash-parse/src/expression/snapshots/nash_parse__expression__accessor__tests__field_access_simple.snap
---
source: crates/nash-parse/src/expression/accessor.rs
description: "Code:\n\nfoo.bar"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 8,
        },
    },
    value: Access(
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 1,
                    column: 4,
                },
            },
            value: Var {
                kind: LowVar,
                name: "foo",
            },
        },
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 5,
                },
                end: Position {
                    line: 1,
                    column: 8,
                },
            },
            value: "bar",
        },
    ),
}
